[package]
name = "dist"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.145", features = ["derive"]}
serde_json = {version = "1.0.145"}
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util", "io-std"]  }
anyhow = "1"
rand = "0.9.2"
